appId: com.oreku.reactnativeshowcase
---
- launchApp
- assertVisible: Showcase
- tapOn: Menu
- assertVisible:
    id: progressive-blur-header
- assertVisible: CUSTOM
- assertVisible:
    id: menu-custom-trigger
