appId: com.oreku.reactnativeshowcase
---
- launchApp
- assertVisible: Showcase
- tapOn: OTP Input
- assertVisible:
    id: progressive-blur-header
- assertVisible: INLINE
- assertVisible:
    id: otp-inline-large
