appId: com.oreku.reactnativeshowcase
---
- launchApp
- assertVisible: Showcase
- scrollUntilVisible:
    element:
      text: Progress
    direction: DOWN
- tapOn: Progress
- assertVisible:
    id: progressive-blur-header
- assertVisible: DEFAULT
- assertVisible:
    id: progress-default
